# ResolveOFX_NDIOutput

./: CHANGELOG.md  CMakeLists.txt  Info.plist  Makefile  QUICKSTART.md  README.md  README_WINDOWS_CUDA.md
Releases/v1.1.4/: README.md  RELEASE_NOTES.md  install.sh
Releases/v1.1.4/macOS/NDIOutput.ofx.bundle/Contents/macOS/: NDIOutput.ofx
Releases/v1.1.6/: RELEASE_NOTES.txt
Releases/v1.1.6/NDIOutput.ofx.bundle/Contents/macOS/: NDIOutput.ofx
Releases/v1.1.8/: RELEASE_NOTES.txt
Releases/v1.1.8/NDIOutput.ofx.bundle/Contents/macOS/: NDIOutput.ofx
Releases/v1.1.9/: GPU_PERFORMANCE_VERIFICATION.md  RELEASE_NOTES.txt  monitor_gpu_performance.sh
Releases/v1.1.9/NDIOutput.ofx.bundle/Contents/macOS/: NDIOutput.ofx
Releases/v1.2.1/: INSTALLATION_GUIDE.md  RELEASE_NOTES.txt
Releases/v1.2.1/NDIOutput.ofx.bundle/Contents/macOS/: NDIOutput.ofx
Releases/v1.2.2/: RELEASE_NOTES.txt
Releases/v1.2.2/NDIOutput.ofx.bundle/Contents/macOS/: NDIOutput.ofx
Releases/v1.2.3/: RELEASE_NOTES.txt
Releases/v1.2.3/NDIOutput.ofx.bundle/Contents/macOS/: NDIOutput.ofx
Releases/v1.2.4/: RELEASE_NOTES.txt
Releases/v1.2.4/NDIOutput.ofx.bundle/Contents/macOS/: NDIOutput.ofx
scripts/: build_windows.bat  build_windows_mingw.bat  check_gpu_logs.sh  increment_version.sh  monitor_ndi_logs.sh  set_version.sh
src/: CudaGPUAcceleration.cu  CudaGPUAcceleration.h  MetalGPUAcceleration.h  MetalGPUAcceleration.mm  NDIOutputPlugin.cpp  NDIOutputPlugin.h
